--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/mode/xml/xml.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/mode/css/css.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/csslint/1.0.5/csslint.min.js"></script>
 </head>
 <body>
   <header>
@@ -31,14 +30,14 @@
       <p>Kod CSS:</p>
       <textarea id="css-code" placeholder="Wpisz kod CSS tutaj..."></textarea>
       <h3 id="feedback"></h3>
+      <button id="downloadBtn">Pobierz pliki</button>
     </section>
 
     <section id="instructions">
       <h2>Poziom 1: Utwórz nagłówek 1 stopnia</h2>
       <p>Twoje zadanie to utworzenie nagłówka 1 stopnia (<code>&lt;h1&gt;</code>) w sekcji <code>&lt;body&gt;</code>, pamiętaj o zamknięciu. Wprowadź odpowiedni kod HTML, aby zakończyć poziom.</p>`;
-      
     </section>
-    
+
 
     <section id="preview">
       <h2>Podgląd</h2>
