--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <textarea id="html-code" placeholder="Wpisz kod HTML tutaj..."></textarea>
       <p>Kod CSS:</p>
       <textarea id="css-code" placeholder="Wpisz kod CSS tutaj..."></textarea>
-      <h3 id="feedback">.</h3>
+      <h3 id="feedback">Poziom</h3>
       <button id="downloadBtn">Pobierz pliki</button>
 
     </section>
@@ -51,7 +51,7 @@
         <button id="fullscreenButton">Pełny ekran</button>
       </div>
       <h2>Podgląd</h2>
-      <iframe id="output"></iframe>
+      <iframe id="output">Podgląd</iframe>
       
     </section>
   </main>
