--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-  <header>
-    <h1>Nauka Tworzenia Stron Internetowych</h1>
+  <header class="header-with-video">
+    <video autoplay muted loop id="header-video">
+      <source src="matrix.webm" type="video/webm">
+      Twoja przeglądarka nie obsługuje wideo w formacie .webm.
+    </video>
+    <div class="header-content">
+      <h1>Nauka Tworzenia Stron Internetowych</h1>
+      <p>Zagrajmy w grę!</p>
+    </div>
   </header>
+  
 
   <main>
     <section id="editor">
