--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/codemirror.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/mode/xml/xml.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/mode/css/css.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
 </head>
 <body>
   <header class="header-with-video">
@@ -37,7 +37,7 @@
       <textarea id="html-code" placeholder="Wpisz kod HTML tutaj..."></textarea>
       <p>Kod CSS:</p>
       <textarea id="css-code" placeholder="Wpisz kod CSS tutaj..."></textarea>
-      <h1 id="feedback">Poziom</h1>
+      <h1 id="feedback"> </h1>
       <button id="downloadBtn">Pobierz pliki</button>
 
     </section>
@@ -70,6 +70,6 @@
     <a href="https://github.com/MazutK">GitHub</a>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
