--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Interaktywny edytor kodu do nauki tworzenia stron internetowych.">
+  <meta name="keywords" content="HTML, CSS, edytor kodu, nauka programowania">
+  <meta name="author" content="Kacper Mazur">
   <title>Nauka Tworzenia Stron Internetowych</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/codemirror.min.css">
