--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 
     <section id="instructions">    
       <h2>Poziom 1: Utwórz nagłówek 1 stopnia</h2>
-      <p>Twoje zadanie to utworzenie nagłówka 1 stopnia (<code>&lt;h1&gt;</code>) w kodzie HTML, pamiętaj o zamknięciu. Wprowadź odpowiedni kod HTML, aby zakończyć poziom.</p>
+      <p>Twoje zadanie to utworzenie nagłówka 1 stopnia (<code>&lt;h1&gt;</code>) w kodzie HTML, pamiętaj o zamknięciu.
+         Wprowadź odpowiedni kod HTML, aby zakończyć poziom.</p>
     </section>
     <button id="Poradnik">Poradnik</button>
 
